--- a/UserWindow.xaml
+++ b/UserWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PracticalWork6"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterOwner"
         Title="UserWindow" Height="450" Width="800">
     <Grid>
 
